--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "payload": "cross-env PAYLOAD_CONFIG_PATH=payload.config.ts payload",
+    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=payload.config.ts payload generate:types"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -33,7 +35,10 @@
     "recharts": "^2.12.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@payloadcms/plugin-cloud-storage": "^1.1.0",
+    "@payloadcms/richtext-slate": "^1.4.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
@@ -44,6 +49,7 @@
     "eslint-config-next": "14.1.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "cross-env": "^7.0.3"
   }
 }
