--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@payloadcms/plugin-cloud-storage": "^1.2.0",
+    "@payloadcms/richtext-slate": "^1.5.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -26,6 +28,7 @@
     "@supabase/supabase-js": "^2.39.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "express": "^4.21.2",
     "lucide-react": "^0.358.0",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
@@ -35,21 +38,18 @@
     "recharts": "^2.12.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
-    "@payloadcms/plugin-cloud-storage": "^1.1.0",
-    "@payloadcms/richtext-slate": "^1.4.0",
-    "express": "^4.18.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "autoprefixer": "^10.4.18",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2",
-    "cross-env": "^7.0.3"
+    "typescript": "^5.4.2"
   }
 }
