--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,18 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
-    }
+      "@/*": ["./*"],
+      "payload/generated-types": ["./payload/payload-types.ts"]
+    },
+    "baseUrl": ".",
+    "typeRoots": ["./node_modules/@types", "./payload/payload-types.ts"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "payload/payload-types.ts"
+  ],
   "exclude": ["node_modules"]
 }
